log-output/manifests/gke-3.3/gateway-3.3.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: exercises
spec:
  gatewayClassName: gke-l7-gxlb
  listeners:
  - name: http
    port: 80
    protocol: HTTP
