log-output/manifests/gke-3.3/httproute-3.3.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: log-output-route
  namespace: exercises
spec:
  parentRefs:
  - name: main-gateway
    port: 80
  hostnames: []
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: log-output-service
      port: 80
